@@ -1,3 +1,8 @@
+2007-08-17  Emmanuele Bassi  <ebassi@gnome.org>
+
+	* main.c: Remove the useless "die" signal handler; return the
+	correct type in the "save-yourself" signal handler.
+
 2007-04-14  Jan Arne Petersen  <jap@gnome.org>
 
 	* logrtns.c: (log_read_dates): Add check for i < n-1. (#364106)
